--- a/CypherQueryBuilder/CypherQueryBuilder.csproj
+++ b/CypherQueryBuilder/CypherQueryBuilder.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.8.6</Version>
+		<Version>1.8.7</Version>
 		<LangVersion>latest</LangVersion>
 		<Authors>Tech J Mage</Authors>
 		<Description>Cypher, OGM, Query</Description>
@@ -13,13 +13,14 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<DocumentationFile>$(MSBuildProjectDirectory)\Documents\Readme.xml</DocumentationFile>
-		<DefaultDocumentationGeneratedPages>Assembly</DefaultDocumentationGeneratedPages>
-		<PackageReadmeFile>index.md</PackageReadmeFile>
+		<DefaultDocumentationGeneratedPages>Assembly</DefaultDocumentationGeneratedPages>		
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<DefaultDocumentationAssemblyPageName>README</DefaultDocumentationAssemblyPageName>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Currying" Version="1.0.4" />
-		<PackageReference Include="Neo4j.Driver" Version="5.27.0" />
+		<PackageReference Include="Neo4j.Driver" Version="5.28.0" />
 		<PackageReference Include="DefaultDocumentation" Version="0.8.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,6 +29,6 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.13.0" />
 		<PackageReference Include="Utility.Disposable" Version="1.1.2" />
-		<None Include="Documents\index.md" Pack="true" PackagePath="\" />
+		<None Include="..\README.md" Pack="true" PackagePath=""/>
 	</ItemGroup>
 </Project>
